<resources>
    <string name="app_name">Stride</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">login</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This emails is incorrect</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_position">My location</string>
    <string name="title_activity_forms">Observatory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Empty" />
    <string name="Kid">Child</string>
    <string name="adole">Adolescent</string>
    <string name="adults">Adult</string>
    <string name="Elderly">Senior</string>
    <string name="groupE">Age group</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_define">Other</string>
    <string name="movility">Physical ability</string>
    <string name="normal">Able</string>
    <string name="asistida">Impaired</string>
    <string name="mecanica">Assisted</string>
    <string name="error_incorrect_email">this email is unknown</string>

    <string name="title_activity_splash">" "</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="todo">TODO</string>
    <string name="sexo">Gender</string>
    <string name="title_activity_form4votation">Observation</string>
    <string name="my_observation">Register</string>
    <string name="title_activity_check_button">Profile</string>
    <string name="title_activity_semaforo">Semaforo</string>
    <string name="profile_ok">Next</string>
    <string name="maps_and_votations">Voted Locations</string>
    <string name="pdfc">STRIDE : Shared Travel Reality of Individual Deficient Environments</string>
    <string name="category">Category</string>
    <string name="category.category1">Inclusive - not/for everybody</string>
    <string name="category.category2">Design - not/for people</string>
    <string name="category.category3">Integrated - has/no conectivity</string>
    <string name="category.category4">Planneded - has/no priority for walkers</string>
    <string name="category.category5">Safe - (no) dangerous traffic</string>
    <string name="category.category6">Secure - feels unwelcome/welcome </string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="change_idioms">Change Language</string>
    <string name="save_data">Save Evaluations?</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="my_statistics">My Statistics</string>
    <string name="email_ex">Email</string>
    <string name="id_for_user">User ID</string>
    <string name="user_name_in_app">Registered user name</string>
    <string name="date_joined_in_stride">Date joined</string>
    <string name="total_observed_person">People observed</string>
    <string name="total_points_voted">Points evaluated</string>
    <string name="today_observed_person">People observed today</string>
    <string name="days_surveyed">Days surveyed</string>
    <string name="user">User</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="not_notacion_yet">No location evaluations yet</string>
    <string name="saved">Saving...</string>
    <string name="category.category7">Other</string>
    <string name="number_of_points_today">Number of points today</string>
    <string name="about_Text">The Stride app has been developed in a cooperation of CEDEUS.cl and Walk21.com</string>
    <string name="new_person">New person</string>
    <string name="save">Save</string>
    <string name="vote">Vote</string>
    <string name="voted_points">Voted Points</string>
    <string name="list_voted_points">List Voted Points</string>
    <string name="your_n_walking_n_experience">Your Walking Experience</string>
    <string name="your">My</string>
    <string name="walking">Walking</string>
    <string name="experience">Experience</string>
    <string name="dutch">Nederlands</string>

    <string name="please_describe_yourself_or_the_person_you_will_observe">Please describe yourself or the person you will observe:</string>
    <string name="is_this_place_safe_nice_and_easy">Is this place safe, nice and easy?</string>
    <string name="risky_unfriendly_dificult">risky, unfriendly, dificult</string>
    <string name="safe_nice_easy">safe, nice, easy</string>
    <string name="undo_last_vote">Undo Last Vote</string>
    <string name="shared_travel_reality_of_individual_deficient_environments">Shared Travel Reality of Individual Deficient Environments</string>
    <string name="stride">STRIDE</string>
    <string name="no_element">no element</string>
    <string name="please_feel_free_to_send_comments_and_feedback_on_the_stride_app_to_stefan_steiniger_from_cedeus_via_email_to_ssteiniger_uc_cl">Please feel free to send comments and feedback on the STRIDE app to Stefan Steiniger, from CEDEUS, via email to: ssteiniger@uc.cl</string>
    <string name="dismiss">Dismiss</string>
    <string name="save_in_file">Save in file</string>
    <string name="my_last_point">My last point</string>
    <string name="confirm">confirm</string>
    <string name="logout">Logout</string>
    <string name="close_app">Close app</string>
    <string name="change_option_last_point">Change Option last point</string>
    <string name="sidewalks">sidewalks option</string>
    <string name="select_how_many_last_point_you_want_see">Select how many last point you want see</string>
    <string name="_10">10</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_400">400</string>
    <string name="title_no_conection">problem in you conection</string>
    <string name="content_no_conection">pleace review you conection or please save the observation in save json</string>
    <string name="german">German</string>
    <string name="new_account">New Account</string>
    <string name="_login_sride">Stride</string>
    <string name="email">Email</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="confirm_info_new_user">Confirm Info New User</string>
    <string name="you_now_haveaccount">Now you have account</string>
    <string name="_aviso_copyblipboard">no pudimos hacer el archivo pero lo guardamos en tu portapapeles por favor copialo en algun lado y despues subelo por las herramintas de la plataforma</string>
</resources>
