<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="About" />
        <item
            android:id="@+id/nav_gallery"
            android:title="Feedback" />
        <item
            android:id="@+id/change_idioms"
            android:title="@string/change_idioms"/>


        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/close_app" />
        <item
            android:id="@+id/change_points_number"
            android:title="@string/change_option_last_point" />

        <item
            android:id="@+id/street_mode"
            android:title="@string/sidewalks" />
    </group>


</menu>
